# tree-sitter-magegamescript

./: .editorconfig  .gitignore  .prettierrc.json  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  SCRATCH_AGAIN.txt  binding.gyp  eslint.config.ts  example-file  go.mod  grammar.js  old_dialog_builder.js  package-lock.json  package.json  parser-actions.js  parser-actions.ts  parser-adventure.ts  parser-bytecode-info.js  parser-bytecode-info.ts  parser-capture.js  parser-capture.ts  parser-compare.ts  parser-dialogs.js  parser-dialogs.ts  parser-file.js  parser-file.ts  parser-node.js  parser-node.ts  parser-project.js  parser-project.ts  parser-tests.js  parser-tests.ts  parser-to-json.js  parser-to-json.ts  parser-types.ts  parser-utilities.js  parser-utilities.ts  parser.js  (+13 more)
bindings/c/: tree-sitter-magegamescript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
comparisons/: demo.mgs  exfiltrated_dialogs.ts  exfiltrated_idk.js  exfiltrated_idk.ts  exfiltrated_serialdialogs.ts  export.mgs  lhs.mgs  manual_export.mgs  manual_translation.js  news.mgs  olds.mgs  one_file_at_a_time.js  rhs.mgs  rhsOriginal.mgs  rhsPre.mgs  translate.js
comparisons/mgs/: demo-v1.mgs  (+10 more)
parser-utilities/: dialog-handling.js  file-state.js  general.js  project-state.js
scenario_source_files/: action_testing.mgs  demo.mgs  gamut.mgs  generic_entity_scripts.mgs  header.mgs  main-menu.mgs  main_menu.mgs  test.mgs  testFile.mgs  test_map.mgs  woprhouse.mgs
scenario_source_files_original_experiments/: gamut.mgs
src/: grammar.json  node-types.json  parser.c
(+186 files in other folders)
